# Work_test

./: README.md  couting_elements.py  delete_24h.py  differences_json.py  pyproject.toml  scheme_cod.py  verify_text.py
